# local-meeting-assistant

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.example.json  main.cpp  setup.sh
src/: audio_capture.cpp  audio_capture.h  config.cpp  config.h  llm_engine.cpp  llm_engine.h  meeting_assistant.cpp  meeting_assistant.h  ring_buffer.cpp  ring_buffer.h  speaker_diarizer.cpp  speaker_diarizer.h  utils.h
